[package]
name = "gizmo-physics-rigid"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
# Optional `bevy_reflect` integration (see `gizmo-core`'s `reflect` feature).
# OFF by default so `bevy_reflect` is absent from the public API at 1.0.
reflect = ["dep:bevy_reflect", "gizmo-physics-core/reflect", "gizmo-core/reflect"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
gizmo-core = { path = "../gizmo-core", version = "0.2.0" }
gizmo-math = { path = "../gizmo-math", version = "0.2.0" }
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.2.0" }
wide = "1.2.0"
rand = "0.10.1"
dashmap = "5.5"
crossbeam-queue = "0.3"
tracing = "0.1.44"
serde_json = "1.0"
bevy_reflect = { version = "0.15.1", features = ["glam"], optional = true }

[dev-dependencies]
proptest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rayon needs OS threads → native only; wasm uses `parallel_compat` (sequential).
rayon = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "0.2"
# `rand` 0.10 pulls getrandom 0.4, which needs an explicit wasm backend feature
# (paired with the `getrandom_backend="wasm_js"` cfg in .cargo/config.toml).
getrandom = { version = "0.4", features = ["wasm_js"] }
