[package]
name = "gizmo-physics-soft"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
gpu_physics = ["wgpu", "bytemuck", "pollster"]

[dependencies]
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
gizmo-core = { path = "../gizmo-core", version = "0.1.4" }
gizmo-math = { path = "../gizmo-math", version = "0.1.4" }
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.1.4" }
wgpu = { version = "0.20", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
tracing = "0.1.44"
