[package]
name = "gizmo-physics"
version.workspace = true
edition.workspace = true

[dependencies]
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
gizmo-core = { path = "../gizmo-core" }
gizmo-math = { path = "../gizmo-math" }
wide = "1.2.0"
arrayvec = "0.7.6"
rand = "0.10.1"
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"

[dev-dependencies]
serde_json = "1.0"
