[package]
name = "gizmo-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = "0.20"
pollster = "0.3"
winit = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
gizmo-math = { path = "../gizmo-math" }
gizmo-core = { path = "../gizmo-core" }
tobj = "4.0.3"
image = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
gltf = "1.4.1"
notify = "6"
rand = "0.9.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
ron = "0.12.1"
tracing = "0.1.44"
image_dds = "0.7.2"
ddsfile = "0.6.0"
meshopt = "0.6.2"

[dev-dependencies]
pollster = "0.3"
