[package]
name = "gizmo-renderer"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
wgpu = { version = "29", features = ["fragile-send-sync-non-atomic-wasm", "webgl"] }
# Shader module composition (#import / #define) so shared structs (SceneUniforms,
# LightData) and BRDF helpers live in one common.wgsl instead of being hand-copied into
# 20+ shaders. We compose to a naga::Module then emit WGSL text (wgpu 29 lacks the
# `naga-ir` feature and the WASM path still post-processes WGSL text), so `naga` is a
# direct dep pinned to the same 29.x wgpu uses, with the WGSL front/back ends enabled.
naga_oil = "0.22"
naga = { version = "29", features = ["wgsl-in", "wgsl-out"] }
log = "0.4"
pollster = "0.3"
winit = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
gizmo-math = { path = "../gizmo-math" , version = "0.2.0" }
gizmo-core = { path = "../gizmo-core" , version = "0.2.0" }
gizmo-animation = { path = "../gizmo-animation", version = "0.2.0", default-features = false }
tobj = "4.0.3"
image = { version = "0.25", features = ["webp"] }
serde = { version = "1.0.228", features = ["derive"] }
gltf = { version = "1.4.1", features = ["import", "extensions", "KHR_materials_emissive_strength", "KHR_texture_transform"] }
notify = "6"
rand = "0.9.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
ron = "0.12.1"
tracing = "0.1.44"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
meshopt = "0.6.2"


[dev-dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Response"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.23.0", features = ["v4", "serde", "js"] }
web-time = "0.2"
