[package]
name = "gizmo-scene"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.1.6" }
gizmo-math = { path = "../gizmo-math" , version = "0.1.6" }
gizmo-physics-core = { path = "../gizmo-physics-core" , version = "0.1.6" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid" , version = "0.1.6" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.1"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
tracing = "0.1.44"
bevy_reflect = "0.15.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gizmo-scripting = { path = "../gizmo-scripting" , version = "0.1.6" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "0.2"
