[package]
name = "gizmo-scripting"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.8.0" }
gizmo-math = { path = "../gizmo-math" , version = "0.8.0" }
gizmo-physics-core = { path = "../gizmo-physics-core" , version = "0.8.0" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid" , version = "0.8.0" }
gizmo-ai = { path = "../gizmo-ai" , version = "0.8.0" }
serde = { version = "1.0.228", features = ["derive"] }
mlua = { version = "0.9", features = ["lua54", "vendored", "send"] }
tracing = "0.1.44"
gizmo-animation = { path = "../gizmo-animation", version = "0.8.0", default-features = false }

[dev-dependencies]
serde_json = "1"
