[package]
name = "gizmo-studio"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
gizmo = { package = "gizmo-engine", path = "../gizmo", features = ["editor", "scene", "audio", "scripting"] , version = "0.1.1" }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
mimalloc = { workspace = true }
