[package]
name = "gizmo-studio"
version.workspace = true
edition.workspace = true
publish = false

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gizmo = { package = "gizmo-engine", path = "../gizmo", features = ["editor", "scene", "audio", "scripting"] , version = "0.2.0" }
rand = "0.9.0"
mimalloc = { workspace = true }
tracing = "0.1.44"
