[package]
name = "gizmo-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gizmo-app = { version = "0.1.7", path = "../gizmo-app", default-features = false }
gizmo-core = { version = "0.1.7", path = "../gizmo-core" }
gizmo-math = { path = "../gizmo-math", version = "0.1.7" }
taffy = "0.10.1"
