[package]
name = "gizmo-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Optional: only the `UiPlugin` convenience wrapper needs the app framework.
# The dependency-light `register(world, schedule)` entry point needs only
# gizmo-core, so gizmo-ui is usable as a pure ECS-UI layer without gizmo-app.
gizmo-app = { version = "0.2.0", path = "../gizmo-app", default-features = false, optional = true }
gizmo-core = { version = "0.2.0", path = "../gizmo-core" }
gizmo-math = { path = "../gizmo-math", version = "0.2.0" }
taffy = "0.10.1"

[features]
default = []
app = ["dep:gizmo-app"]
