[package]
name = "gizmo-engine"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
[features]
default = ["audio", "scene"]
audio = ["dep:gizmo-audio"]
editor = ["dep:gizmo-editor"]
scripting = ["dep:gizmo-scripting"]
scene = ["dep:gizmo-scene"]

[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.1.2" }
gizmo-math = { path = "../gizmo-math" , version = "0.1.2" }
gizmo-renderer = { path = "../gizmo-renderer" , version = "0.1.2" }
gizmo-window = { path = "../gizmo-window" , version = "0.1.2" }
gizmo-physics = { path = "../gizmo-physics", features = ["gpu_physics"] , version = "0.1.2" }
gizmo-app = { path = "../gizmo-app" , version = "0.1.2" }
gizmo-ai = { path = "../gizmo-ai" , version = "0.1.2" }
gizmo-audio = { path = "../gizmo-audio", optional = true , version = "0.1.2" }
gizmo-scripting = { path = "../gizmo-scripting", optional = true , version = "0.1.2" }
gizmo-scene = { path = "../gizmo-scene", optional = true , version = "0.1.2" }
winit = { workspace = true }
wgpu = "0.20"
egui = "0.28"
bytemuck = "1"
gizmo-editor = { path = "../gizmo-editor", optional = true , version = "0.1.2" }
tracing = "0.1.44"

[dev-dependencies]
criterion = "0.5"
rayon = "1.11.0"

