[package]
name = "yelbegen-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
yelbegen-core = { path = "../yelbegen-core" }
yelbegen-renderer = { path = "../yelbegen-renderer" }
yelbegen-math = { path = "../yelbegen-math" }
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
egui = "0.26"
yelbegen-editor = { path = "../yelbegen-editor" }
yelbegen-audio = { path = "../yelbegen-audio" }

